@@ -26,17 +26,18 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 import org.opencv.core.Size;
 import org.photonvision.common.configuration.CameraConfiguration;
 import org.photonvision.common.configuration.ConfigManager;
-import org.photonvision.common.configuration.PhotonConfiguration;
 import org.photonvision.common.dataflow.CVPipelineResultConsumer;
 import org.photonvision.common.dataflow.DataChangeService;
+import org.photonvision.common.dataflow.DataChangeService.SubscriberHandle;
 import org.photonvision.common.dataflow.events.OutgoingUIEvent;
 import org.photonvision.common.dataflow.networktables.NTDataPublisher;
 import org.photonvision.common.dataflow.statusLEDs.StatusLEDConsumer;
+import org.photonvision.common.dataflow.websocket.UICameraConfiguration;
 import org.photonvision.common.dataflow.websocket.UIDataPublisher;
+import org.photonvision.common.dataflow.websocket.UIPhotonConfiguration;
 import org.photonvision.common.hardware.HardwareManager;
 import org.photonvision.common.logging.LogGroup;
 import org.photonvision.common.logging.Logger;
@@ -44,8 +45,8 @@ import org.photonvision.common.util.SerializationUtils;
 import org.photonvision.vision.calibration.CameraCalibrationCoefficients;
 import org.photonvision.vision.camera.CameraQuirk;
 import org.photonvision.vision.camera.CameraType;
-import org.photonvision.vision.camera.LibcameraGpuSource;
 import org.photonvision.vision.camera.QuirkyCamera;
+import org.photonvision.vision.camera.csi.LibcameraGpuSource;
 import org.photonvision.vision.frame.Frame;
 import org.photonvision.vision.frame.consumer.FileSaveFrameConsumer;
 import org.photonvision.vision.frame.consumer.MJPGFrameConsumer;
@@ -70,6 +71,7 @@ public class VisionModule {
     private final VisionRunner visionRunner;
     private final StreamRunnable streamRunnable;
     private final VisionModuleChangeSubscriber changeSubscriber;
+    private final SubscriberHandle changeSubscriberHandle;
     private final LinkedList<CVPipelineResultConsumer> resultConsumers = new LinkedList<>();
     // Raw result consumers run before any drawing has been done by the
     // OutputStreamPipeline
@@ -78,7 +80,6 @@ public class VisionModule {
     private final NTDataPublisher ntConsumer;
     private final UIDataPublisher uiDataConsumer;
     private final StatusLEDConsumer statusLEDsConsumer;
-    protected final int moduleIndex;
     protected final QuirkyCamera cameraQuirks;
 
     protected TrackedTarget lastPipelineResultBestTarget;
@@ -92,7 +93,7 @@ public class VisionModule {
     MJPGFrameConsumer inputVideoStreamer;
     MJPGFrameConsumer outputVideoStreamer;
 
-    public VisionModule(PipelineManager pipelineManager, VisionSource visionSource, int index) {
+    public VisionModule(PipelineManager pipelineManager, VisionSource visionSource) {
         logger =
                 new Logger(
                         VisionModule.class,
@@ -105,15 +106,14 @@ public class VisionModule {
             visionSource.getCameraConfiguration().cameraQuirks = QuirkyCamera.DefaultCamera;
 
         // We don't show gain if the config says it's -1. So check here to make sure
-        // it's non-negative
-        // if it _is_ supported
+        // it's non-negative if it _is_ supported
         if (cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
             pipelineManager.userPipelineSettings.forEach(
                     it -> {
                         if (it.cameraGain == -1) it.cameraGain = 75; // Sane default
                     });
         }
-        if (cameraQuirks.hasQuirk(CameraQuirk.AWBGain)) {
+        if (cameraQuirks.hasQuirk(CameraQuirk.AwbRedBlueGain)) {
             pipelineManager.userPipelineSettings.forEach(
                     it -> {
                         if (it.cameraRedGain == -1) it.cameraRedGain = 11; // Sane defaults
@@ -132,9 +132,7 @@ public class VisionModule {
                         this.cameraQuirks,
                         getChangeSubscriber());
         this.streamRunnable = new StreamRunnable(new OutputStreamPipeline());
-        this.moduleIndex = index;
-
-        DataChangeService.getInstance().addSubscriber(changeSubscriber);
+        changeSubscriberHandle = DataChangeService.getInstance().addSubscriber(changeSubscriber);
 
         createStreams();
 
@@ -147,8 +145,9 @@ public class VisionModule {
                         this::setPipeline,
                         pipelineManager::getDriverMode,
                         this::setDriverMode);
-        uiDataConsumer = new UIDataPublisher(index);
-        statusLEDsConsumer = new StatusLEDConsumer(index);
+        uiDataConsumer = new UIDataPublisher(visionSource.getSettables().getConfiguration().uniqueName);
+        statusLEDsConsumer =
+                new StatusLEDConsumer(visionSource.getSettables().getConfiguration().uniqueName);
         addResultConsumer(ntConsumer);
         addResultConsumer(uiDataConsumer);
         addResultConsumer(statusLEDsConsumer);
@@ -258,7 +257,7 @@ public class VisionModule {
 
         @Override
         public void run() {
-            while (true) {
+            while (!Thread.interrupted()) {
                 final Frame m_frame;
                 final AdvancedPipelineSettings settings;
                 final List<TrackedTarget> targets;
@@ -292,7 +291,8 @@ public class VisionModule {
                     try {
                         Thread.sleep(1);
                     } catch (InterruptedException e) {
-                        e.printStackTrace();
+                        logger.warn("StreamRunnable was interrupted - exiting");
+                        return;
                     }
                 }
             }
@@ -300,8 +300,31 @@ public class VisionModule {
     }
 
     public void start() {
+        visionSource.cameraConfiguration.deactivated = false;
         visionRunner.startProcess();
         streamRunnable.start();
+    }
+
+    public void stop() {
+        visionSource.cameraConfiguration.deactivated = true;
+        visionRunner.stopProcess();
+
+        try {
+            streamRunnable.interrupt();
+            streamRunnable.join();
+        } catch (InterruptedException e) {
+            logger.error("Exception killing process thread", e);
+        }
+
+        visionSource.release();
+
+        inputVideoStreamer.close();
+        outputVideoStreamer.close();
+        inputFrameSaver.close();
+        outputFrameSaver.close();
+
+        changeSubscriberHandle.stop();
+        setVisionLEDs(false);
     }
 
     public void setFov(double fov) {
@@ -356,7 +379,6 @@ public class VisionModule {
         settings.boardHeight = data.patternHeight;
         settings.boardWidth = data.patternWidth;
         settings.boardType = data.boardType;
-        settings.useMrCal = data.useMrCal;
         settings.resolution = resolution;
         settings.useOldPattern = data.useOldPattern;
         settings.tagFamily = data.tagFamily;
@@ -365,7 +387,7 @@ public class VisionModule {
         if (!cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
             settings.cameraGain = -1;
         }
-        if (!cameraQuirks.hasQuirk(CameraQuirk.AWBGain)) {
+        if (!cameraQuirks.hasQuirk(CameraQuirk.AwbRedBlueGain)) {
             settings.cameraRedGain = -1;
             settings.cameraBlueGain = -1;
         }
@@ -388,7 +410,12 @@ public class VisionModule {
     }
 
     public CameraCalibrationCoefficients endCalibration() {
-        var ret = pipelineManager.calibration3dPipeline.tryCalibration();
+        var ret =
+                pipelineManager.calibration3dPipeline.tryCalibration(
+                        ConfigManager.getInstance()
+                                .getCalibrationImageSavePathWithRes(
+                                        pipelineManager.calibration3dPipeline.getSettings().resolution,
+                                        visionSource.getCameraConfiguration().uniqueName));
         pipelineManager.setCalibrationMode(false);
 
         setPipeline(pipelineManager.getRequestedIndex());
@@ -407,6 +434,9 @@ public class VisionModule {
         logger.info("Setting pipeline to " + index);
         logger.info("Pipeline name: " + pipelineManager.getPipelineNickname(index));
         pipelineManager.setIndex(index);
+
+        VisionSourceSettables settables = visionSource.getSettables();
+
         var pipelineSettings = pipelineManager.getPipelineSettings(index);
 
         if (pipelineSettings == null) {
@@ -414,45 +444,51 @@ public class VisionModule {
             return false;
         }
 
-        visionSource.getSettables().setVideoModeInternal(pipelineSettings.cameraVideoModeIndex);
-        visionSource.getSettables().setBrightness(pipelineSettings.cameraBrightness);
+        visionRunner.runSyncronously(
+                () -> {
+                    settables.setVideoModeInternal(pipelineSettings.cameraVideoModeIndex);
+                    settables.setBrightness(pipelineSettings.cameraBrightness);
 
-        // If manual exposure, force exposure slider to be valid
-        if (!pipelineSettings.cameraAutoExposure) {
-            if (pipelineSettings.cameraExposureRaw < 0)
-                pipelineSettings.cameraExposureRaw = 10; // reasonable default
-        }
+                    // If manual exposure, force exposure slider to be valid
+                    if (!pipelineSettings.cameraAutoExposure) {
+                        if (pipelineSettings.cameraExposureRaw < 0)
+                            pipelineSettings.cameraExposureRaw = 10; // reasonable default
+                    }
 
-        visionSource.getSettables().setExposureRaw(pipelineSettings.cameraExposureRaw);
-        try {
-            visionSource.getSettables().setAutoExposure(pipelineSettings.cameraAutoExposure);
-        } catch (VideoException e) {
-            logger.error("Unable to set camera auto exposure!");
-            logger.error(e.toString());
-        }
-        if (cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
-            // If the gain is disabled for some reason, re-enable it
-            if (pipelineSettings.cameraGain == -1) pipelineSettings.cameraGain = 75;
-            visionSource.getSettables().setGain(Math.max(0, pipelineSettings.cameraGain));
-        } else {
-            pipelineSettings.cameraGain = -1;
-        }
+                    settables.setExposureRaw(pipelineSettings.cameraExposureRaw);
+                    try {
+                        settables.setAutoExposure(pipelineSettings.cameraAutoExposure);
+                    } catch (VideoException e) {
+                        logger.error("Unable to set camera auto exposure!");
+                        logger.error(e.toString());
+                    }
+                    if (cameraQuirks.hasQuirk(CameraQuirk.Gain)) {
+                        // If the gain is disabled for some reason, re-enable it
+                        if (pipelineSettings.cameraGain == -1) pipelineSettings.cameraGain = 75;
+                        settables.setGain(Math.max(0, pipelineSettings.cameraGain));
+                    } else {
+                        pipelineSettings.cameraGain = -1;
+                    }
 
-        if (cameraQuirks.hasQuirk(CameraQuirk.AWBGain)) {
-            // If the AWB gains are disabled for some reason, re-enable it
-            if (pipelineSettings.cameraRedGain == -1) pipelineSettings.cameraRedGain = 11;
-            if (pipelineSettings.cameraBlueGain == -1) pipelineSettings.cameraBlueGain = 20;
-            visionSource.getSettables().setRedGain(Math.max(0, pipelineSettings.cameraRedGain));
-            visionSource.getSettables().setBlueGain(Math.max(0, pipelineSettings.cameraBlueGain));
-        } else {
-            pipelineSettings.cameraRedGain = -1;
-            pipelineSettings.cameraBlueGain = -1;
-        }
+                    if (cameraQuirks.hasQuirk(CameraQuirk.AwbRedBlueGain)) {
+                        // If the AWB gains are disabled for some reason, re-enable it
+                        if (pipelineSettings.cameraRedGain == -1) pipelineSettings.cameraRedGain = 11;
+                        if (pipelineSettings.cameraBlueGain == -1) pipelineSettings.cameraBlueGain = 20;
+                        settables.setRedGain(Math.max(0, pipelineSettings.cameraRedGain));
+                        settables.setBlueGain(Math.max(0, pipelineSettings.cameraBlueGain));
+                    } else {
+                        pipelineSettings.cameraRedGain = -1;
+                        pipelineSettings.cameraBlueGain = -1;
 
-        setVisionLEDs(pipelineSettings.ledMode);
+                        // All other cameras (than picams) should support AWB temp
+                        settables.setWhiteBalanceTemp(pipelineSettings.cameraWhiteBalanceTemp);
+                        settables.setAutoWhiteBalance(pipelineSettings.cameraAutoWhiteBalance);
+                    }
 
-        visionSource.getSettables().getConfiguration().currentPipelineIndex =
-                pipelineManager.getRequestedIndex();
+                    setVisionLEDs(pipelineSettings.ledMode);
+
+                    settables.getConfiguration().currentPipelineIndex = pipelineManager.getRequestedIndex();
+                });
 
         return true;
     }
@@ -477,12 +513,13 @@ public class VisionModule {
                         getStateAsCameraConfig(), visionSource.getSettables().getConfiguration().uniqueName);
     }
 
-    void saveAndBroadcastAll() {
+    public void saveAndBroadcastAll() {
         saveModule();
         DataChangeService.getInstance()
                 .publishEvent(
                         new OutgoingUIEvent<>(
-                                "fullsettings", ConfigManager.getInstance().getConfig().toHashMap()));
+                                "fullsettings",
+                                UIPhotonConfiguration.programStateToUi(ConfigManager.getInstance().getConfig())));
     }
 
     void saveAndBroadcastSelective(WsContext originContext, String propertyName, Object value) {
@@ -492,7 +529,6 @@ public class VisionModule {
         HashMap<String, Object> map = new HashMap<>();
         HashMap<String, Object> subMap = new HashMap<>();
         subMap.put(propertyName, value);
-        map.put("cameraIndex", this.moduleIndex);
         map.put("mutatePipelineSettings", subMap);
 
         DataChangeService.getInstance()
@@ -509,11 +545,14 @@ public class VisionModule {
         saveAndBroadcastAll();
     }
 
-    public PhotonConfiguration.UICameraConfiguration toUICameraConfig() {
-        var ret = new PhotonConfiguration.UICameraConfiguration();
+    public UICameraConfiguration toUICameraConfig() {
+        var ret = new UICameraConfiguration();
 
+        var config = visionSource.getCameraConfiguration();
+        ret.matchedCameraInfo = config.matchedCameraInfo;
+        ret.cameraPath = config.getDevicePath();
         ret.fov = visionSource.getSettables().getFOV();
-        ret.isCSICamera = visionSource.getCameraConfiguration().cameraType == CameraType.ZeroCopyPicam;
+        ret.isCSICamera = config.matchedCameraInfo.type() == CameraType.ZeroCopyPicam;
         ret.nickname = visionSource.getSettables().getConfiguration().nickname;
         ret.uniqueName = visionSource.getSettables().getConfiguration().uniqueName;
         ret.currentPipelineSettings =
@@ -521,8 +560,12 @@ public class VisionModule {
         ret.currentPipelineIndex = pipelineManager.getRequestedIndex();
         ret.pipelineNicknames = pipelineManager.getPipelineNicknames();
         ret.cameraQuirks = visionSource.getSettables().getConfiguration().cameraQuirks;
-        ret.maxExposureRaw = visionSource.getSettables().getMaxExposureRaw();
         ret.minExposureRaw = visionSource.getSettables().getMinExposureRaw();
+        ret.maxExposureRaw = visionSource.getSettables().getMaxExposureRaw();
+        ret.minWhiteBalanceTemp = visionSource.getSettables().getMinWhiteBalanceTemp();
+        ret.maxWhiteBalanceTemp = visionSource.getSettables().getMaxWhiteBalanceTemp();
+
+        ret.deactivated = config.deactivated;
 
         // TODO refactor into helper method
         var temp = new HashMap<Integer, HashMap<String, Object>>();
@@ -543,6 +586,11 @@ public class VisionModule {
 
             temp.put(k, internalMap);
         }
+
+        if (videoModes.size() == 0) {
+            logger.error("no video modes, guhhhhh");
+        }
+
         ret.videoFormatList = temp;
         ret.outputStreamPort = this.outputStreamPort;
         ret.inputStreamPort = this.inputStreamPort;
@@ -550,10 +598,13 @@ public class VisionModule {
         ret.calibrations =
                 visionSource.getSettables().getConfiguration().calibrations.stream()
                         .map(CameraCalibrationCoefficients::cloneWithoutObservations)
-                        .collect(Collectors.toList());
+                        .toList();
 
         ret.isFovConfigurable =
                 !(ConfigManager.getInstance().getConfig().getHardwareConfig().hasPresetFOV());
+
+        ret.isConnected = visionSource.getFrameProvider().isConnected();
+        ret.hasConnected = visionSource.getFrameProvider().hasConnected();
 
         return ret;
     }
@@ -576,11 +627,9 @@ public class VisionModule {
 
         // Pipelines like DriverMode and Calibrate3dPipeline have null output frames
         if (result.inputAndOutputFrame != null
-                && (pipelineManager.getCurrentPipelineSettings() instanceof AdvancedPipelineSettings)) {
-            streamRunnable.updateData(
-                    result.inputAndOutputFrame,
-                    (AdvancedPipelineSettings) pipelineManager.getCurrentPipelineSettings(),
-                    result.targets);
+                && (pipelineManager.getCurrentPipelineSettings()
+                        instanceof AdvancedPipelineSettings settings)) {
+            streamRunnable.updateData(result.inputAndOutputFrame, settings, result.targets);
             // The streamRunnable manages releasing in this case
         } else {
             consumeResults(result.inputAndOutputFrame, result.targets);
@@ -604,9 +653,9 @@ public class VisionModule {
     }
 
     public void setTargetModel(TargetModel targetModel) {
-        var settings = pipelineManager.getCurrentPipeline().getSettings();
-        if (settings instanceof ReflectivePipelineSettings) {
-            ((ReflectivePipelineSettings) settings).targetModel = targetModel;
+        var pipelineSettings = pipelineManager.getCurrentPipeline().getSettings();
+        if (pipelineSettings instanceof ReflectivePipelineSettings settings) {
+            settings.targetModel = targetModel;
             saveAndBroadcastAll();
         } else {
             logger.error("Cannot set target model of non-reflective pipe! Ignoring...");
@@ -615,8 +664,8 @@ public class VisionModule {
 
     public void addCalibrationToConfig(CameraCalibrationCoefficients newCalibration) {
         if (newCalibration != null) {
-            logger.info("Got new calibration for " + newCalibration.resolution);
-            visionSource.getSettables().getConfiguration().addCalibration(newCalibration);
+            logger.info("Got new calibration for " + newCalibration.unrotatedImageSize);
+            visionSource.getSettables().addCalibration(newCalibration);
         } else {
             logger.error("Got null calibration?");
         }
@@ -633,5 +682,13 @@ public class VisionModule {
         visionSource.getCameraConfiguration().cameraQuirks.updateQuirks(quirksToChange);
         visionSource.remakeSettables();
         saveAndBroadcastAll();
+    }
+
+    public String uniqueName() {
+        return this.visionSource.cameraConfiguration.uniqueName;
+    }
+
+    public CameraConfiguration getCameraConfiguration() {
+        return this.visionSource.cameraConfiguration;
     }
 }
